1. Collection API Улучшения[#139169]