@@ -2,10 +2,9 @@ package ru.job4j.list;
 
 import org.junit.Test;
 import ru.job4j.search.Person;
-
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -25,7 +24,7 @@ public class ConvertListTest {
     @Test
     public void when7ElementsThen9() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -37,7 +36,7 @@ public class ConvertListTest {
     @Test
     public void when8ElementsThen9() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -49,7 +48,7 @@ public class ConvertListTest {
     @Test
     public void when9ElementsThen9() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -61,7 +60,7 @@ public class ConvertListTest {
     @Test
     public void when7ElementsThen8() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 2);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 2);
         int[][] expect = {
                 {1, 2, 3, 4},
                 {5, 6, 7, 0},
@@ -72,7 +71,7 @@ public class ConvertListTest {
     @Test
     public void when8ElementsThen8() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8), 2);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8), 2);
         int[][] expect = {
                 {1, 2, 3, 4},
                 {5, 6, 7, 8},
@@ -83,7 +82,7 @@ public class ConvertListTest {
     @Test
     public void when9ElementsThen10() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9), 2);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9), 2);
         int[][] expect = {
                 {1, 2, 3, 4, 5},
                 {6, 7, 8, 9, 0},
@@ -94,7 +93,7 @@ public class ConvertListTest {
     @Test
     public void when9ElementsThen10With5Rows() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9), 5);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9), 5);
         int[][] expect = {
                 {1, 2},
                 {3, 4},
@@ -108,7 +107,7 @@ public class ConvertListTest {
     @Test
     public void when8ElementsThen10With5Rows() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8), 5);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8), 5);
         int[][] expect = {
                 {1, 2},
                 {3, 4},
@@ -122,7 +121,7 @@ public class ConvertListTest {
     @Test
     public void when8ElementsThen8With4Rows() {
         ConvertList list = new ConvertList();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8), 4);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8), 4);
         int[][] expect = {
                 {1, 2},
                 {3, 4},
@@ -138,26 +137,26 @@ public class ConvertListTest {
     @Test
     public void whenListWith2Arrays10ElementsThenListWith10IntegerElements() {
         ConvertList list = new ConvertList();
-        List<Integer> result = list.toList(Arrays.asList(
+        List<Integer> result = list.toList(List.of(
                 new int[]{1, 2, 3},
                 new int[]{4, 5, 6},
                 new int[]{7, 8, 9}
         ));
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenListWith5Arrays10ElementsThenListWith10IntegerElements() {
         ConvertList list = new ConvertList();
-        List<Integer> result = list.toList(Arrays.asList(
+        List<Integer> result = list.toList(List.of(
                 new int[]{1, 2},
                 new int[]{3, 4, 5},
                 new int[]{6, 7, 8, 9, 10},
                 new int[]{11},
                 new int[]{12, 13}
         ));
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
         assertThat(result, is(expect));
     }
 
@@ -170,7 +169,7 @@ public class ConvertListTest {
         Person one = new Person("111", "Petr", "Russia, Bryansk");
         Person two = new Person("123", "Oleg", "Russia, Moscow");
         Person three = new Person("222", "Joe", "USA, New York");
-        HashMap<Integer, Person> result = list.toMap(Arrays.asList(
+        HashMap<Integer, Person> result = list.toMap(List.of(
                 one,
                 two,
                 three
